--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <div class="jane-style">
                 <h3>Hello World!</h3>
             </div>
-            <!-- New HTML content goes here! -->
+            <div class="joey-style">
+                <h3> Joey: Loves <em> HTML </em> </h3> 
+            </div>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
