--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>Hello World!</h3>
             </div>
             <div class="joey-style">
-                <h3> Joey: Loves <em> HTML </em> </h3> 
+                <h3> Joey: Loves <em> HTML </em>, kinda</h3> 
             </div>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
